--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-# REACT_APP_API_BASE_URL= http://localhost:4500/api
+REACT_APP_API_BASE_URL= http://localhost:4500/api
 
- REACT_APP_API_BASE_URL= http://3.80.57.117:4500/api
+#  REACT_APP_API_BASE_URL= http://3.80.57.117:4500/api
