--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "moment-timezone": "^0.5.45",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.2",
+    "react-bootstrap-typeahead": "^6.3.2",
     "react-calendar": "^5.0.0",
     "react-datepicker": "^7.2.0",
     "react-dom": "^18.3.1",
